--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,10 @@
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "express": "^4.14.0",
+    "merge": "^1.2.0",
     "method-override": "^2.3.6",
     "reflect-metadata": "0.1.3",
     "underscore": "^1.8.3"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
