--- a/react/package.json
+++ b/react/package.json
@@ -19,8 +19,8 @@
     "uuid": "^2.0.3"
   },
   "scripts": {
-    "start": "npm-run-all -p start:*",
-    "start:front": "webpack-dev-server --progress",
+    "start:all": "npm-run-all -p start:*",
+    "start": "webpack-dev-server --progress",
     "start:server": "node server/server",
     "storybook": "start-storybook -p 6006 --dont-track",
     "build-storybook": "build-storybook"
