--- a/vuejs/package.json
+++ b/vuejs/package.json
@@ -5,11 +5,10 @@
   "author": "Cyril Balit <cbalit@gmail.com>",
   "private": true,
   "scripts": {
-    "client": "node build/dev-server.js",
-    "server": "npm start",
+    "start": "node build/dev-server.js",    
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "start": "node _server/server.js",
+    "server": "node _server/server.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
