--- a/polymer/package.json
+++ b/polymer/package.json
@@ -8,7 +8,7 @@
     "underscore": "^1.8.3"
   },
   "scripts": {
-    "start": "node server/server & polymer serve"
+    "start": "polymer serve -p 9004"
   },
   "engines": {
     "node": ">=0.12.0"
