--- a/angular1/bower.json
+++ b/angular1/bower.json
@@ -1,29 +1,28 @@
 {
   "name": "angular1",
   "dependencies": {
-    "angular": "~1.5.0",
-    "angular-route": "~1.5.0",
-    "angular-material":"~1.1.0",
-    "google-map": "GoogleWebComponents/google-map#^1.1.13",
+    "angular": "~1.6.0",
+    "angular-route": "~1.6.0",
+    "angular-material":"~1.1.0",    
     "material-design-icons": "~3.0.1",
-    "paper-menu": "PolymerElements/paper-menu#~1.1.0",
-    "polymer": "~1.7.0",
-    "promise-polyfill": "~2.1.0",
-    "web-animations-js": "~2.1.4",
-    "iron-meta": "PolymerElements/iron-meta#^1.1.2",
-    "paper-button": "PolymerElements/paper-button#^1.0.14",
-    "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
-    "paper-input": "PolymerElements/paper-input#^1.1.20",
-    "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "iron-dropdown": "PolymerElements/iron-dropdown#^1.5.3",
-    "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.2",
-    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.4.1",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.3",
-    "paper-item": "PolymerElements/paper-item#^1.2.1",
-    "promise-polyfill": "polymerlabs/promise-polyfill#^1.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "iron-meta": "PolymerElements/iron-meta#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.0",
+    "paper-input": "PolymerElements/paper-input#^2.0.0",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
+    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
+    "paper-menu-button": "PolymerElements/paper-menu-button#^2.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.0",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
+    "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "paper-material": "PolymerElements/paper-material#^2.0.0",
+    "promise-polyfill": "polymerlabs/promise-polyfill#^2.0.0",
+    "google-map": "GoogleWebComponents/google-map#^2.0.0"
   },
-  "resolutions": {
-    "promise-polyfill": "1.0.0"
+  "devDependencies": {
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   }
 }
