--- a/vuejs/bower.json
+++ b/vuejs/bower.json
@@ -10,16 +10,16 @@
     "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
     "paper-menu-button": "PolymerElements/paper-menu-button#^2.0.0",
     "iron-icons": "PolymerElements/iron-icons#^2.0.0",
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "paper-material": "PolymerElements/paper-material#^2.0.0",
+    "paper-progress": "PolymerElements/paper-progress#^2.0.1",
     "promise-polyfill": "polymerlabs/promise-polyfill#^2.0.0",
     "google-map": "GoogleWebComponents/google-map#^2.0.0",
     "web-animations-js": "~2.1.4",
-    "iban": "0.0.7",
-    "paper-card": "PolymerElements/paper-card#^2.0.0",
-    "paper-progress": "PolymerElements/paper-progress#^2.0.1"
+    "iban": "0.0.7"
   },
   "devDependencies": {
     "jquery": "3.1.0"
